force-app/main/default/objects/Zoom_Users_Info__c/Zoom_Users_Info__c.object-meta.xml
<CustomObject>
    <label>Zoom Users</label>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom Users Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>