force-app/main/default/objects/Zoom_Users_Info__c/fields/AHT_Inbound_Calls__c.field-meta.xml
<CustomField>
    <fullName>AHT_Inbound_Calls__c</fullName>
    <description>Average hours of phone calls per day for Phone Users.</description>
    <formula>TEXT(  MFLOOR( (Total_Inbound_Calls_Duration__c  / Total_Inbound_Calls__c) / 60))+&quot; min(s)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average hours of phone calls per day for Phone Users.</inlineHelpText>
    <label>AHT Inbound Calls</label>
    <type>Text</type>
</CustomField>