force-app/main/default/objects/Zoom_Users_Info__c/fields/AHT_Outbound__c.field-meta.xml
<CustomField>
    <fullName>AHT_Outbound__c</fullName>
    <description>Average outbound calls duration per day.</description>
    <formula>TEXT(  MFLOOR( (Outbound_Calls_Duration__c  / Outbound_Calls__c) / 60))+&quot; min(s)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average outbound calls duration per day.</inlineHelpText>
    <label>AHT Outbound</label>
    <type>Text</type>
</CustomField>