force-app/main/default/objects/Zoom_Users_Info__c/fields/Away__c.field-meta.xml
<CustomField>
    <fullName>Away__c</fullName>
    <label>Away</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>