force-app/main/default/objects/Zoom_Users_Info__c/fields/Call_Center_Member__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Member__c</fullName>
    <description>Call Center member</description>
    <inlineHelpText>Call Center member</inlineHelpText>
    <label>Call Center Member</label>
    <length>100</length>
    <type>Text</type>
</CustomField>