force-app/main/default/objects/Zoom_Users_Info__c/fields/CC_Prev_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Prev_Status__c</fullName>
    <label>Prev Status CC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>