force-app/main/default/objects/Zoom_Users_Info__c/fields/Contact_Center_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Center_Status__c</fullName>
    <description>Contact center user&apos;s availability status.</description>
    <inlineHelpText>Contact center user&apos;s availability status.</inlineHelpText>
    <label>Status CC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>