force-app/main/default/objects/Zoom_Users_Info__c/fields/Contact_Center_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Center_Sub_Status__c</fullName>
    <description>Contact Center user status when the user&apos;s current status is Not Ready.</description>
    <inlineHelpText>Contact Center user status when the user&apos;s current status is Not Ready.</inlineHelpText>
    <label>Contact Center Sub Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>