force-app/main/default/objects/Zoom_Users_Info__c/fields/Custom_CC_Status__c.field-meta.xml
<CustomField>
    <fullName>Custom_CC_Status__c</fullName>
    <label>Custom CC Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>