force-app/main/default/objects/Zoom_Users_Info__c/fields/Custom_Status__c.field-meta.xml
<CustomField>
    <fullName>Custom_Status__c</fullName>
    <label>Custom Status</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>