force-app/main/default/objects/Zoom_Users_Info__c/fields/Do_Not_Disturb__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Disturb__c</fullName>
    <label>Do Not Disturb</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>