force-app/main/default/objects/Zoom_Users_Info__c/fields/Extension_Id__c.field-meta.xml
<CustomField>
    <fullName>Extension_Id__c</fullName>
    <description>Zoom application extension Id.</description>
    <inlineHelpText>Zoom application extension Id.</inlineHelpText>
    <label>Extension Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>