force-app/main/default/objects/Zoom_Users_Info__c/fields/Extension_Number__c.field-meta.xml
<CustomField>
    <fullName>Extension_Number__c</fullName>
    <description>Zoom application extension number.</description>
    <inlineHelpText>Zoom application extension number.</inlineHelpText>
    <label>Extension Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>