force-app/main/default/objects/Zoom_Users_Info__c/fields/In_Calendar_Event__c.field-meta.xml
<CustomField>
    <fullName>In_Calendar_Event__c</fullName>
    <label>In Calendar Event</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>