force-app/main/default/objects/Zoom_Users_Info__c/fields/In_Meeting__c.field-meta.xml
<CustomField>
    <fullName>In_Meeting__c</fullName>
    <label>In Meeting</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>