force-app/main/default/objects/Zoom_Users_Info__c/fields/LogIn__c.field-meta.xml
<CustomField>
    <fullName>LogIn__c</fullName>
    <label>LogIn</label>
    <type>DateTime</type>
</CustomField>