force-app/main/default/objects/Zoom_Users_Info__c/fields/LogOut__c.field-meta.xml
<CustomField>
    <fullName>LogOut__c</fullName>
    <label>LogOut</label>
    <type>DateTime</type>
</CustomField>