force-app/main/default/objects/Zoom_Users_Info__c/fields/Not_Ready__c.field-meta.xml
<CustomField>
    <fullName>Not_Ready__c</fullName>
    <label>Not Ready</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>