force-app/main/default/objects/Zoom_Users_Info__c/fields/Occupied__c.field-meta.xml
<CustomField>
    <fullName>Occupied__c</fullName>
    <label>Occupied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>