force-app/main/default/objects/Zoom_Users_Info__c/fields/Offline__c.field-meta.xml
<CustomField>
    <fullName>Offline__c</fullName>
    <label>Offline</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>