force-app/main/default/objects/Zoom_Users_Info__c/fields/Offline_Status__c.field-meta.xml
<CustomField>
    <fullName>Offline_Status__c</fullName>
    <label>Offline Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>