force-app/main/default/objects/Zoom_Users_Info__c/fields/On_Phone_Call__c.field-meta.xml
<CustomField>
    <fullName>On_Phone_Call__c</fullName>
    <label>On Phone Call</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>