force-app/main/default/objects/Zoom_Users_Info__c/fields/Outbound_Calls_Duration__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Calls_Duration__c</fullName>
    <description>Total user outbound phone calls duration.</description>
    <inlineHelpText>Total user outbound phone calls duration.</inlineHelpText>
    <label>Outbound Calls Duration</label>
    <summarizedField>Zoom_Phone_Calls_Info__c.Duration__c</summarizedField>
    <summaryFilterItems>
        <field>Zoom_Phone_Calls_Info__c.Call_Direction__c</field>
        <operation>equals</operation>
        <value>outbound</value>
    </summaryFilterItems>
    <summaryForeignKey>Zoom_Phone_Calls_Info__c.Zoom_Users_Info__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>