force-app/main/default/objects/Zoom_Users_Info__c/fields/Presence_Status__c.field-meta.xml
<CustomField>
    <fullName>Presence_Status__c</fullName>
    <description>User status for Zoom App</description>
    <inlineHelpText>User status for Zoom App</inlineHelpText>
    <label>Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>