force-app/main/default/objects/Zoom_Users_Info__c/fields/Presenting__c.field-meta.xml
<CustomField>
    <fullName>Presenting__c</fullName>
    <label>Presenting</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>