force-app/main/default/objects/Zoom_Users_Info__c/fields/Ready__c.field-meta.xml
<CustomField>
    <fullName>Ready__c</fullName>
    <label>Ready</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>