force-app/main/default/objects/Zoom_Users_Info__c/fields/Status_Updated__c.field-meta.xml
<CustomField>
    <fullName>Status_Updated__c</fullName>
    <label>Status Updated</label>
    <type>DateTime</type>
</CustomField>