force-app/main/default/objects/Zoom_Users_Info__c/fields/Total_Away__c.field-meta.xml
<CustomField>
    <fullName>Total_Away__c</fullName>
    <description>Total time Away per day.</description>
    <formula>IF(ISBLANK( Away__c  ),null,


IF((MOD(( Away__c /60)/60,1)*60) &gt;= 10,


TEXT(FLOOR( ( Away__c/60 )/60)) + &quot;h : &quot; + TEXT( FLOOR(MOD(( Away__c/60 )/60,1)*60)) +&quot;min&quot;,


TEXT(FLOOR( ( Away__c/60 )/60)) + &quot;h : 0&quot; + TEXT( FLOOR(MOD(( Away__c/60 )/60,1)*60)) +&quot;min&quot;


))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total time Away per day.</inlineHelpText>
    <label>Total Away</label>
    <type>Text</type>
</CustomField>