force-app/main/default/objects/Zoom_Users_Info__c/fields/Total_Do_Not_Disturb__c.field-meta.xml
<CustomField>
    <fullName>Total_Do_Not_Disturb__c</fullName>
    <description>Total time Do Not Disturb per day.</description>
    <formula>IF(ISBLANK( Do_Not_Disturb__c  ),null,


IF((MOD(( Do_Not_Disturb__c /60)/60,1)*60) &gt;= 10,


TEXT(FLOOR( ( Do_Not_Disturb__c/60 )/60)) + &quot;h : &quot; + TEXT( FLOOR(MOD(( Do_Not_Disturb__c/60 )/60,1)*60)) +&quot;min&quot;,


TEXT(FLOOR( ( Do_Not_Disturb__c/60 )/60)) + &quot;h : 0&quot; + TEXT( FLOOR(MOD(( Do_Not_Disturb__c/60 )/60,1)*60)) +&quot;min&quot;


))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total time Do Not Disturb per day.</inlineHelpText>
    <label>Total Do Not Disturb</label>
    <type>Text</type>
</CustomField>