force-app/main/default/objects/Zoom_Users_Info__c/fields/Total_In_Calendar_Event__c.field-meta.xml
<CustomField>
    <fullName>Total_In_Calendar_Event__c</fullName>
    <description>Total time In Calendar Event per day.</description>
    <formula>IF(ISBLANK( In_Calendar_Event__c  ),null,


IF((MOD(( In_Calendar_Event__c /60)/60,1)*60) &gt;= 10,


TEXT(FLOOR( ( In_Calendar_Event__c/60 )/60)) + &quot;h : &quot; + TEXT( FLOOR(MOD(( In_Calendar_Event__c/60 )/60,1)*60)) +&quot;min&quot;,


TEXT(FLOOR( ( In_Calendar_Event__c/60 )/60)) + &quot;h : 0&quot; + TEXT( FLOOR(MOD(( In_Calendar_Event__c/60 )/60,1)*60)) +&quot;min&quot;


))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total time In Calendar Event per day.</inlineHelpText>
    <label>Total In Calendar Event</label>
    <type>Text</type>
</CustomField>