force-app/main/default/objects/Zoom_Users_Info__c/fields/Total_Not_Ready__c.field-meta.xml
<CustomField>
    <fullName>Total_Not_Ready__c</fullName>
    <description>User not ready per day.</description>
    <formula>IF(ISBLANK( Not_Ready__c ),null,


IF((MOD(( Not_Ready__c /60)/60,1)*60) &gt;= 10,


TEXT(FLOOR( ( Not_Ready__c/60 )/60)) + &quot;h : &quot; + TEXT( FLOOR(MOD(( Not_Ready__c/60 )/60,1)*60)) +&quot;min&quot;,


TEXT(FLOOR( ( Not_Ready__c/60 )/60)) + &quot;h : 0&quot; + TEXT( FLOOR(MOD(( Not_Ready__c/60 )/60,1)*60)) +&quot;min&quot;


))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>User not ready per day.</inlineHelpText>
    <label>Total Not Ready</label>
    <type>Text</type>
</CustomField>