force-app/main/default/objects/Zoom_Users_Info__c/fields/Total_Occupied__c.field-meta.xml
<CustomField>
    <fullName>Total_Occupied__c</fullName>
    <description>User occupied per day.</description>
    <formula>IF(ISBLANK( Occupied__c ),null,


IF((MOD(( Occupied__c /60)/60,1)*60) &gt;= 10,


TEXT(FLOOR( ( Occupied__c/60 )/60)) + &quot;h : &quot; + TEXT( FLOOR(MOD(( Occupied__c/60 )/60,1)*60)) +&quot;min&quot;,


TEXT(FLOOR( ( Occupied__c/60 )/60)) + &quot;h : 0&quot; + TEXT( FLOOR(MOD(( Occupied__c/60 )/60,1)*60)) +&quot;min&quot;


))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>User occupied per day.</inlineHelpText>
    <label>Total Occupied</label>
    <type>Text</type>
</CustomField>