force-app/main/default/objects/Zoom_Users_Info__c/fields/Total_Offline__c.field-meta.xml
<CustomField>
    <fullName>Total_Offline__c</fullName>
    <description>Total offline time per day.</description>
    <formula>IF(ISBLANK( Offline__c ),null,


IF((MOD(( Offline__c /60)/60,1)*60) &gt;= 10,


TEXT(FLOOR( ( Offline__c/60 )/60)) + &quot;h : &quot; + TEXT( FLOOR(MOD(( Offline__c/60 )/60,1)*60)) +&quot;min&quot;,


TEXT(FLOOR( ( Offline__c/60 )/60)) + &quot;h : 0&quot; + TEXT( FLOOR(MOD(( Offline__c/60 )/60,1)*60)) +&quot;min&quot;


))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total offline time per day.</inlineHelpText>
    <label>Total Offline</label>
    <type>Text</type>
</CustomField>