force-app/main/default/objects/Zoom_Users_Info__c/fields/Total_Offline_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Offline_Time__c</fullName>
    <description>User offline per day.</description>
    <formula>IF(ISBLANK( Offline_Status__c ),null,


IF((MOD(( Offline_Status__c /60)/60,1)*60) &gt;= 10,


TEXT(FLOOR( ( Offline_Status__c/60 )/60)) + &quot;h : &quot; + TEXT( FLOOR(MOD(( Offline_Status__c/60 )/60,1)*60)) +&quot;min&quot;,


TEXT(FLOOR( ( Offline_Status__c/60 )/60)) + &quot;h : 0&quot; + TEXT( FLOOR(MOD(( Offline_Status__c/60 )/60,1)*60)) +&quot;min&quot;


))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>User offline per day.</inlineHelpText>
    <label>Total Offline Time</label>
    <type>Text</type>
</CustomField>