force-app/main/default/objects/Zoom_Users_Info__c/fields/Total_On_Phone_Call__c.field-meta.xml
<CustomField>
    <fullName>Total_On_Phone_Call__c</fullName>
    <description>Total On Phone Call per day.</description>
    <formula>IF(ISBLANK( On_Phone_Call__c  ),null,


IF((MOD(( On_Phone_Call__c /60)/60,1)*60) &gt;= 10,


TEXT(FLOOR( ( On_Phone_Call__c/60 )/60)) + &quot;h : &quot; + TEXT( FLOOR(MOD(( On_Phone_Call__c/60 )/60,1)*60)) +&quot;min&quot;,


TEXT(FLOOR( ( On_Phone_Call__c/60 )/60)) + &quot;h : 0&quot; + TEXT( FLOOR(MOD(( On_Phone_Call__c/60 )/60,1)*60)) +&quot;min&quot;


))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total On Phone Call per day.</inlineHelpText>
    <label>Total On Phone Call</label>
    <type>Text</type>
</CustomField>