force-app/main/default/objects/Zoom_Users_Info__c/fields/Total_Outbound_Calls__c.field-meta.xml
<CustomField>
    <fullName>Total_Outbound_Calls__c</fullName>
    <description>Total Outbound phone calls</description>
    <inlineHelpText>Total Outbound phone calls</inlineHelpText>
    <label>Total Outbound Calls</label>
    <summaryFilterItems>
        <field>Zoom_Phone_Calls_Info__c.Outbound_Call__c</field>
        <operation>equals</operation>
        <value>outbound</value>
    </summaryFilterItems>
    <summaryForeignKey>Zoom_Phone_Calls_Info__c.Zoom_Users_Info__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>