force-app/main/default/objects/Zoom_Users_Info__c/fields/Total_Presenting__c.field-meta.xml
<CustomField>
    <fullName>Total_Presenting__c</fullName>
    <description>Total time In Presenting per day.</description>
    <formula>IF(ISBLANK( Presenting__c  ),null,


IF((MOD(( Presenting__c /60)/60,1)*60) &gt;= 10,


TEXT(FLOOR( ( Presenting__c/60 )/60)) + &quot;h : &quot; + TEXT( FLOOR(MOD(( Presenting__c/60 )/60,1)*60)) +&quot;min&quot;,


TEXT(FLOOR( ( Presenting__c/60 )/60)) + &quot;h : 0&quot; + TEXT( FLOOR(MOD(( Presenting__c/60 )/60,1)*60)) +&quot;min&quot;


))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total time Presenting per day.</inlineHelpText>
    <label>Total Presenting</label>
    <type>Text</type>
</CustomField>