force-app/main/default/objects/Zoom_Users_Info__c/fields/Total_Ready__c.field-meta.xml
<CustomField>
    <fullName>Total_Ready__c</fullName>
    <description>User available per day.</description>
    <formula>IF(ISBLANK( Ready__c ),null,


IF((MOD(( Ready__c /60)/60,1)*60) &gt;= 10,


TEXT(FLOOR( ( Ready__c/60 )/60)) + &quot;h : &quot; + TEXT( FLOOR(MOD(( Ready__c/60 )/60,1)*60)) +&quot;min&quot;,


TEXT(FLOOR( ( Ready__c/60 )/60)) + &quot;h : 0&quot; + TEXT( FLOOR(MOD(( Ready__c/60 )/60,1)*60)) +&quot;min&quot;


))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>User available per day.</inlineHelpText>
    <label>Total Ready</label>
    <type>Text</type>
</CustomField>