force-app/main/default/objects/Zoom_Users_Info__c/fields/Tracking_Date__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Date__c</fullName>
    <label>Tracking Date</label>
    <type>Date</type>
</CustomField>