force-app/main/default/objects/Zoom_Users_Info__c/fields/User_Log_In__c.field-meta.xml
<CustomField>
    <fullName>User_Log_In__c</fullName>
    <description>First user logged in</description>
    <label>User Log In</label>
    <type>DateTime</type>
</CustomField>