force-app/main/default/objects/Zoom_Users_Info__c/fields/User_Log_Out__c.field-meta.xml
<CustomField>
    <fullName>User_Log_Out__c</fullName>
    <label>User Log Out</label>
    <type>DateTime</type>
</CustomField>