force-app/main/default/objects/Zoom_Users_Info__c/fields/Zoom_Department__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Department__c</fullName>
    <label>Zoom Department</label>
    <length>250</length>
    <type>Text</type>
</CustomField>