force-app/main/default/objects/Zoom_Users_Info__c/fields/Zoom_Email__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Email__c</fullName>
    <description>Zoom application email address.</description>
    <inlineHelpText>Zoom application email address.</inlineHelpText>
    <label>Zoom Email</label>
    <type>Email</type>
</CustomField>