force-app/main/default/objects/Zoom_Users_Info__c/fields/Zoom_Name__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Name__c</fullName>
    <description>The name that the user uses in Zoom.</description>
    <label>Zoom Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>