force-app/main/default/objects/Zoom_Users_Info__c/fields/Zoom_Phone_Calls_Info__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Phone_Calls_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zoom Phone Calls Info</label>
    <referenceTo>Zoom_Phone_Calls_Info__c</referenceTo>
    <relationshipLabel>Zoom Users Infos</relationshipLabel>
    <relationshipName>Zoom_Users_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>