force-app/main/default/objects/Zoom_Users_Info__c/fields/Zoom_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Zoom_User_Id__c</fullName>
    <description>The unique identifier of the user (userId).</description>
    <inlineHelpText>The unique identifier of the user (userId).</inlineHelpText>
    <label>Zoom User Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>