force-app/main/default/objects/Zoom_Users_Info__c/recordTypes/Contact_Center.recordType-meta.xml
<RecordType>
    <fullName>Contact_Center</fullName>
    <active>true</active>
    <description>Record type for users  from Zoom Contact Center</description>
    <label>Contact Center</label>
</RecordType>