force-app/main/default/objects/Zoom_Users_Info__c/recordTypes/Zoom_Phone.recordType-meta.xml
<RecordType>
    <fullName>Zoom_Phone</fullName>
    <active>true</active>
    <description>Record type for users from Zoom Phone Call Center</description>
    <label>Zoom Phone</label>
</RecordType>