force-app/main/default/objects/Zoom_Users_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Tracking_Date__c</columns>
    <columns>Presence_Status__c</columns>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>LogIn__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>