force-app/main/default/objects/Zoom_Users_Info__c/listViews/Details.listView-meta.xml
<ListView>
    <fullName>Details</fullName>
    <columns>Tracking_Date__c</columns>
    <columns>NAME</columns>
    <columns>Presence_Status__c</columns>
    <columns>Total_Inbound_Calls__c</columns>
    <columns>Total_Outbound_Calls__c</columns>
    <columns>LogIn__c</columns>
    <columns>LogOut__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Tracking_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Details</label>
</ListView>