force-app/main/default/objects/Zoom_Users_Info__c/listViews/Phone_Calls_List.listView-meta.xml
<ListView>
    <fullName>Phone_Calls_List</fullName>
    <columns>Tracking_Date__c</columns>
    <columns>NAME</columns>
    <columns>Presence_Status__c</columns>
    <columns>AHT_Inbound_Calls__c</columns>
    <columns>Total_Inbound_Calls__c</columns>
    <columns>AHT_Outbound_Call__c</columns>
    <columns>Total_Outbound_Calls__c</columns>
    <columns>LogIn__c</columns>
    <columns>LogOut__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Call_Center_Member__c</field>
        <operation>equals</operation>
        <value>Zoom Phone Call Center</value>
    </filters>
    <filters>
        <field>Tracking_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Phone Calls List</label>
</ListView>